# game-of-life

./: .clangd  CMakeLists.txt  CMakePresets.json  build.sh  run.sh
include/: game_of_life.h  grid.h
lib/: game_of_life.cpp  grid.cpp
shader/: fragment.glsl
src/: main.cpp
